T-9129 local/program: Fix inconsistencies with visibility and accessibility
Reviewed-on: https://review.totaralms.com/1024
Tested-by: Jenkins User <jenkins@totaralms.com>

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -40,6 +40,12 @@ a.dimmed:visited {
   color:#AAAAAA;
 }
 
+a.inaccessible:link,
+a.inaccessible:visited,
+span.inaccessible {
+    text-decoration: line-through;
+}
+
 a:hover {
   color:#FF0000;
 }
